--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="button.css">
+        <link rel="stylesheet" href="button.css" >
     </head>
     <body>
         <div>
-            <h2>ORLN</h2>
-            <!-- <h4 id="textStatus"></h4> -->
-            <label class="switch">
-                <input id="toggleEnabled" type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <!-- <button id="toggleEnabled">Toggle</button> -->
+            <div>
+                <h4>Relative Line Numbering for Overleaf</h4>
+            </div>
+            <div>
+                <span>Use relative line numbering</span>
+                <label class="switch">
+                    <input id="toggleEnabled" type="checkbox" >
+                    <span id="sliderElem" class="slider round"></span>
+                </label>
+            </div>
         </div>
         <script src="popup.js"></script>
     </body>
