--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="button.css" />
+        <link rel="stylesheet" href="popup.css" />
     </head>
     <body>
         <div>
